--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -107,6 +107,9 @@
     box-shadow: none;
     height: 56px;
 }
+.message-group h2 {
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black;
+}
 .unread-mentions-indicator-bottom, 
 .unread-mentions-indicator-top {
     overflow: visible;
@@ -407,7 +410,8 @@
 [class="user-name"][style*="color: rgb(7, 7, 7);"],
 [class="user-name"][style*="color: rgb(0, 0, 1);"],
 [class="user-name"][style*="color: rgb(0, 0, 2);"],
-[class="user-name"][style*="color: rgb(8, 0, 0);"] {
+[class="user-name"][style*="color: rgb(8, 0, 0);"], 
+[class="user-name"][style*="color: rgb(6, 2, 2);"] {
    text-shadow: 0 0 4px white, 0 0 4px white;
 }
 /* ----- */
@@ -423,14 +427,7 @@
 a {
     color: #ab9ee5 !important;
 }
-.message-group h2 {
-    background-color: rgba(0,0,0,0.4);
-    padding: 3px 7px;
-    border-top: 1px solid rgba(200, 16, 46, .8) /* (Main Color, .8) */;
-    border-left: 1px solid rgba(200, 16, 46, .8) /* (Main Color, .8) */;
-    border-bottom: 1px solid rgba(200, 16, 46, .8) /* (Main Color, .8) */;
-    box-shadow: 2px 0 6px 4px black;
-}
+
 .theme-dark .menu-Sp6bN1 {
     background: #C8102E;
     box-shadow: none;
@@ -1476,7 +1473,7 @@ a {
 /* User Popout and Modal */
 .userPopout-3XzG_A {
     box-shadow: none;
-    background: url(http://www.4usky.com/data/out/65/164576443-new-jersey-devils-wallpapers.jpg)
+    background: url(http://i.imgur.com/GXH2Xob.jpg)
     50%/cover;
     box-shadow: inset 0 0 56px black, 0 0 26px black;
 }
@@ -1755,4 +1752,7 @@ a {
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.theme-dark .searchQuery-1B7rtx .searchFor-3W5Vad strong {
+    color: white;
 }
