--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -407,7 +407,8 @@
 [class="user-name"][style*="color: rgb(7, 7, 7);"],
 [class="user-name"][style*="color: rgb(0, 0, 1);"],
 [class="user-name"][style*="color: rgb(0, 0, 2);"],
-[class="user-name"][style*="color: rgb(8, 0, 0);"] {
+[class="user-name"][style*="color: rgb(8, 0, 0);"], 
+[class="user-name"][style*="color: rgb(6, 2, 2);"] {
    text-shadow: 0 0 4px white, 0 0 4px white;
 }
 /* ----- */
@@ -423,14 +424,7 @@
 a {
     color: #ab9ee5 !important;
 }
-.message-group h2 {
-    background-color: rgba(0,0,0,0.4);
-    padding: 3px 7px;
-    border-top: 1px solid rgba(82, 167, 50, .8) /* (Main Color, .8) */;
-    border-left: 1px solid rgba(82, 167, 50, .8) /* (Main Color, .8) */;
-    border-bottom: 1px solid rgba(82, 167, 50, .8) /* (Main Color, .8) */;
-    box-shadow: 2px 0 6px 4px black;
-}
+
 .theme-dark .menu-Sp6bN1 {
     background: #52A732;
     box-shadow: none;
@@ -507,6 +501,9 @@ a {
 .theme-dark .member-3W1lQa.popout-open:hover .content-OzHfo4 {
     background-color: rgba(95, 193, 58, 0.8); /* (Hover Color, .8) */
     color: #fff;
+}
+.message-group h2 {
+    text-shadow: 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black;
 }
 .theme-dark .reaction .reaction-count,
 .theme-dark .reaction.reaction-me .reaction-count {
@@ -1479,7 +1476,7 @@ a {
 /* User Popout and Modal */
 .userPopout-3XzG_A {
     box-shadow: none;
-    background: url(https://wallpapercave.com/wp/0ucVc4s.jpg) 50%/cover;
+    background: url(https://wallpapercave.com/wp/0ucVc4s.jpg) 80%/cover;
     box-shadow: inset 0 0 56px black, 0 0 26px black;
 }
 .theme-dark .headerNormal-T_seeN {
@@ -1757,4 +1754,7 @@ a {
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+.theme-dark .searchQuery-1B7rtx .searchFor-3W5Vad strong {
+    color: white;
 }
