--- a/Yumeko.theme.css
+++ b/Yumeko.theme.css
@@ -1781,6 +1781,12 @@ a {
     width: 17px !important;
     height: 17px !important;
 }
+.theme-dark .avatarStatus-3jMZl_ {
+   width: 10px !important;
+   height: 10px !important;
+   right: -3px;
+   bottom: -3px;
+}
 .statusOnline-1FlpW_,
 .status-online {
     background-image: url(https://www.chipsandgames.com/images/products/detail/201gr.png) !important;
