--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -116,7 +116,7 @@ a {
 	background-image: linear-gradient(0deg,rgba(0,0,0,0),rgba(0,0,0,0) 1px,#d1aa4c 0,#d1aa4c 2px,rgba(0,0,0,0) 0);
 }
 .theme-dark .topic-2QX7LI a,
-.theme-dark .message-group a,
+.theme-dark .markup-2BOw-j a,
 .theme-dark .embedTitleLink-1Zla9e {
     color: #d1aa4c !important;
 }
